Bug 691877 - Invalid text when converting to PDF/A
Summary: Invalid text when converting to PDF/A
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows 7
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-11 17:39 UTC by Mike
Modified: 2011-10-02 02:35 UTC (History)
0 users

See Also:
Customer: 631
Word Size: ---


Attachments
PS file (85.90 KB, application/postscript)
2011-01-11 17:40 UTC, Mike
Details
PDF file (10.43 KB, application/pdf)
2011-01-11 17:41 UTC, Mike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike 2011-01-11 17:39:43 UTC
When converting the attached PostScript file to PDF/A the output file contains squares instead of text. This was working fine in GS 8.7
Comment 1 Mike 2011-01-11 17:40:38 UTC
Created attachment 7109 [details]
PS file
Comment 2 Mike 2011-01-11 17:41:24 UTC
Created attachment 7110 [details]
PDF file
Comment 3 Ken Sharp 2011-01-12 08:37:38 UTC
The embedded TrueType font is being set as non-symbolic when PDF/A is selected, which is never supposed to happen and certainly should not be happening for PDF/A output.
Comment 4 Ken Sharp 2011-02-01 08:35:38 UTC
Fixed in revision 12086:

http://ghostscript.com/pipermail/gs-cvs/2011-February/012202.html